--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  
+  "homepage": "https://srishtiv424.github.io/Connect/",
   "name": "connect",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-
+"predeploy":"npm run build",
+"deploy":"gh/pages -d dist",
     "dev": "vite",
     "build": "vite build",
     
